projects/vb6parse/snapshots/syntax/statements/system_interaction/savesetting/savesetting_with_expression.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/savesetting.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SaveSettingStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SaveSettingKeyword
                  text: SaveSetting
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"MyApp\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Math\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Result\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: BinaryExpression
                          children:
                            - kind: IdentifierExpression
                              children:
                                - kind: Identifier
                                  text: x
                            - kind: Whitespace
                              text: " "
                            - kind: AdditionOperator
                              text: +
                            - kind: Whitespace
                              text: " "
                            - kind: BinaryExpression
                              children:
                                - kind: IdentifierExpression
                                  children:
                                    - kind: Identifier
                                      text: y
                                - kind: Whitespace
                                  text: " "
                                - kind: MultiplicationOperator
                                  text: "*"
                                - kind: Whitespace
                                  text: " "
                                - kind: NumericLiteralExpression
                                  children:
                                    - kind: IntegerLiteral
                                      text: "2"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
